update login methods
